# AiForMillikan

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_millikan.py
configs/: default.yaml
docs/: frontend_backend_interface.md  raw_video_smoke.md  training_quality_filter_方案指引.md  元电荷盲反演与量子化验证.md  单颗q计算.md  视频处理_一颗油滴轨迹提取.md
raw_data/: AGENTS.md
src/millikan_ai/: __init__.py  api.py  compute.py  config.py  pipeline.py
src/millikan_ai/calibration/: grid.py
src/millikan_ai/cli/: __init__.py  __main__.py
src/millikan_ai/elementary/: estimate.py
src/millikan_ai/ocr/: voltage.py
src/millikan_ai/outputs/: schemas.py  validity.py  visualization.py
src/millikan_ai/physics/: charge.py
src/millikan_ai/quality/: __init__.py  rules.py
src/millikan_ai/reporting/: __init__.py  markdown.py
src/millikan_ai/segments/: fitting.py  platforms.py  voltage_change.py
src/millikan_ai/tracking/: detector.py  fusion.py  overlay.py  tracker.py
src/millikan_ai/video/: reader.py
tests/: test_algorithms.py  test_analyze_report.py  test_api.py  test_cli_pipeline.py  test_compute_backend.py  test_config_video_schema.py  test_quality_adapter.py  test_tracking_fusion.py
training_quality_filter/: AGENTS.md
