[project]
name = "millikan-ai"
version = "0.1.0"
description = "Non-ML backend and CLI for Millikan oil drop experiment analysis"
requires-python = ">=3.11"
dependencies = [
  "opencv-python",
  "numpy",
  "scipy",
  "pandas",
  "pyyaml",
]

[project.scripts]
millikan-ai = "millikan_ai.cli.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
